javali_tests/A3/A4_keinestamSchmid/success/CorrectBuiltInReadFloatCall.javali
// Rule 2.3.2: Tests that a correct call to readf succeeds.
class Main {
	void main() {
		float f;
		f = readf();
	}
}