javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInReadFloatCall.javali
// Rule 2.3.2: Tests that an incorrect call to readf fails.
class Main {
	void main() {
		float f;
		f = readf(123);
	}
}